# flt-edog-devmode

./: .gitignore  README.md  edog-logs.cmd  edog-logs.py  edog-setup.cmd  edog.cmd  edog.py  install.ps1
extensions/vs2022/: Commands.cs  Directory.Build.props  Directory.Build.targets  FLTEdogDevMode.csproj  FLTEdogDevModePackage.cs  FLTEdogDevModePackage.vsct  PackageGuids.cs  README.md  nuget.config  source.extension.vsixmanifest
extensions/vscode/: .vscodeignore  README.md  package-lock.json  package.json
extensions/vscode/src/: extension.ts
pip-package/: AZURE-ARTIFACTS-SETUP.md  README.md  pyproject.toml
pip-package/flt_edog_devmode/: __init__.py  cli.py  core.py
