[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flt-edog-devmode"
version = "1.0.0"
description = "MWC Token Manager for FabricLiveTable EDOG Development"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "FabricLiveTable Team", email = "flt-team@microsoft.com"}
]
keywords = ["edog", "fabric", "livetable", "mwc", "token"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "playwright>=1.40.0",
]

[project.scripts]
edog = "flt_edog_devmode.cli:main"

[project.urls]
"Homepage" = "https://dev.azure.com/msazure/One/_git/fabric-livetable"
